# SmallProjects

./: .replit  jarvis.py  main.py  pyproject.toml
env/: pyvenv.cfg
newproj/: hello.py
proj/: American Grade.py  Word Guessing Game.py  avenge.py
