[tool.poetry]
name = "repl_nix_NotedLazyMarkuplanguage"
version = "0.1.0"
description = ""
authors = ["Joshua-EhdEhd <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.6"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
